add admin service & auth
